making progress but need to fix gap between release art and release info text

--- a/frontend/src/components/cover_art/css/CoverArt.css
+++ b/frontend/src/components/cover_art/css/CoverArt.css
@@ -13,8 +13,6 @@
 }
 
 .release-container {
-    display: inline-block;
-    background-color: rgba(0, 0, 0, 3%);
     border-radius: 10px;
     overflow: hidden;
 }
@@ -25,13 +23,25 @@
 
 .release-info {
     color: rgba(0, 0, 0, 70%);
-    padding: 10px 15px;
+    background-color: rgba(0, 0, 0, 5%);
+    padding: 2px 15px;
+    transform: translateY(-100%);
+    transition: transform 1s ease-in-out;
+    position: relative;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    z-index: -5;
+}
+
+.album-art-img:hover + .release-info {
+    transform: translateY(0);
 }
 
 .info-line {
-    line-height: 1.2;
+    line-height: 1.1;
+    margin: 6px 0;
 }
 
 .release-name {
-    padding-bottom: 8px;
+    padding-bottom: 5px;
 }
