--- a/frontend/src/components/formatted_release/css/FormattedRelease.css
+++ b/frontend/src/components/formatted_release/css/FormattedRelease.css
@@ -1,19 +1,19 @@
-.release-container {
+.release-container-fr {
     display: inline-block;
     background-color: rgba(0, 0, 0, 3%);
     border-radius: 10px;
     overflow: hidden;
 }
 
-.image-container {
+.image-container-fr {
     border-radius: 10px;
 }
 
-.release-info {
+.release-info-fr {
     color: rgba(0, 0, 0, 70%);
     padding: 10px 15px;
 }
 
-.info-line {
+.info-line-fr {
     margin: 0;
 }
